# GTestProjectExample

./: CMakeLists.txt  README.md
scripts/: build_gtest.bat  generate_project.bat
source/: CMakeLists.txt  main.cpp
source/SampleLib/: CMakeLists.txt  SampleClass.cpp  SampleClass.hpp
tests/: CMakeLists.txt
tests/SampleLibTest/: CMakeLists.txt  SampleClassTest.cpp
